--- a/polar/index.html
+++ b/polar/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1200, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
                     <nav class="nav">
                         <ul class="nav__list">
                             <a href="#!" class="logo">
-                                <img src="IMG/Logo.png" alt="" class="logo__img">
+                                <img src="IMG/icons/Logo.png" alt="" class="logo__img">
                             </a>
                             <li class="nav__item">
                                 <a href="" class="nav__link">home</a>
@@ -65,7 +65,7 @@
                         </button>
                     </div>
                     <div class="hero__decor">
-                        <img src="img/icecream.png" alt="" class="content__img">
+                        <img src="img/content/icecream.png" alt="" class="content__img">
                     </div>               
                 </div>               
             </div> 
@@ -75,7 +75,7 @@
                 <ul class="Delivery__list">
                     <li class="Delivery__item">
                         <div class="Delivery__img-wrap">
-                            <img src="IMG/Group.svg" alt="">
+                            <img src="IMG/icons/Group.svg" alt="">
                         </div>
                         <h3 class="title">
                             Free Chipping
@@ -86,7 +86,7 @@
                     </li>
                     <li class="Delivery__item">
                         <div class="Delivery__img-wrap">
-                            <img src="IMG/Group (1).svg" alt="">
+                            <img src="IMG/icons/Group (1).svg" alt="">
                         </div>
                         <h3 class="title">
                             Quick Packaging
@@ -97,7 +97,7 @@
                     </li>
                     <li class="Delivery__item">
                         <div class="Delivery__img-wrap">
-                            <img src="IMG/cash-back 1.svg" alt="">
+                            <img src="IMG/icons/cash-back 1.svg" alt="">
                         </div>
                         <h3 class="title">
                             100% Money Back
@@ -108,7 +108,7 @@
                     </li>
                     <li class="Delivery__item">
                         <div class="Delivery__img-wrap">
-                            <img src="IMG/fast-delivery 1.svg" alt="">
+                            <img src="IMG/icons/fast-delivery 1.svg" alt="">
                         </div>
                         <h3 class="title">
                             Fast Delivery
@@ -134,7 +134,7 @@
                     </button>
                 </div>
                 <div class="decor">
-                    <img src="img/icecream2.png" alt="" class="seedetails__img">
+                    <img src="img/content/icecream2.png" alt="" class="seedetails__img">
                 </div>
             </div>
         </section>
@@ -184,7 +184,7 @@
                 <div class="product__list">
                     <div class="product__item">
                         <div class="product__img-wrap">
-                            <img src="IMG/brown_bread.jpg" alt="" class="product__img">
+                            <img src="IMG/content/brown_bread.jpg" alt="" class="product__img">
                         </div>
                         <div class="product__info">
                             <h4 class="product__title">
@@ -210,7 +210,7 @@
                     </div>
                     <div class="product__item">
                         <div class="product__img-wrap">
-                            <img src="IMG/Cayenne_chocolate.jpg" alt="" class="product__img">
+                            <img src="IMG/content/Cayenne_chocolate.jpg" alt="" class="product__img">
                         </div>
                         <div class="product__info">
                             <h4 class="product__title">
@@ -237,7 +237,7 @@
                     </div>
                     <div class="product__item">
                         <div class="product__img-wrap">
-                            <img src="IMG/Sweet_corn.jpg" alt="" class="product__img">
+                            <img src="IMG/content/Sweet_corn.jpg" alt="" class="product__img">
                         </div>
                         <div class="product__info">
                             <h4 class="product__title">
@@ -257,7 +257,9 @@
                                 </span>
                             </div>
                             <button class="btn">
-                                Buy Now
+                                <a href="https://hcdev.ru/css/object-fit/" class="btn__link">
+                                    Buy Now
+                                </a>
                             </button>
                         </div>
                     </div>
@@ -271,7 +273,7 @@
                     <div class="review">
                         <div class="review__head">
                             <div class="avatar">
-                                <img src="IMG/girl.jpg" alt="" class="avatar__img">
+                                <img src="IMG/content/girl.jpg" alt="" class="avatar__img">
                             </div>
                             <div class="review__user">
                                 <div class="review__user-name">
@@ -281,9 +283,10 @@
                                     AMIRICAN
                                 </div>
                             </div>
-                            <div class="review__text">
-                                Thanks a lot for the prompt service. Really appreciate. Excellence taste in Every Bite.Add a joy of best Taste. Foodie Moments.
-                            </div>
+
+                        </div>
+                        <div class="review__text">
+                            Thanks a lot for the prompt service. Really <br> appreciate. Excellence taste in Every Bite. Add a joy of best Taste. Foodie Moments.
                         </div>
                     </div>
                     <div class="feedback__slider">
@@ -295,12 +298,24 @@
                                 <a href="#!" class="avatars-slider__ctrl avatars-slider__ctrl_direction_next">
                                     <img src="IMG/icons/right-arrow 1.svg" alt="" class="avatars-slider__icon">
                                 </a>
+
                             </div>
+                            <ul class="avatar-slider__list">
+                                <li class="avatars-slider__item avatar">
+                                    <img src="IMG/content/girl.jpg" alt="" class="avatar__img">
+                                </li>
+                                <li class="avatars-slider__item avatar active">
+                                    <img src="IMG/content/girl.jpg" alt="" class="avatar__img">
+                                </li>
+                                <li class="avatars-slider__item avatar">
+                                    <img src="IMG/content/girl.jpg" alt="" class="avatar__img">
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <div class="feedback__decor">
-                    <img src="IMG/sweet.jpg" alt="Конфеты" class="feedback__pic">
+                    <img src="IMG/content/sweet.jpg" alt="Конфеты" class="feedback__pic">
                 </div> 
             </div>
         </section> 
