--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </button>
                     </div>
                     <div class="hero__decor">
-                        <img src="img/content/icecream.png" alt="" class="content__img">
+                        <img src="img/content/icecream.jpg" alt="" class="content__img">
                     </div>               
                 </div>               
             </div> 
@@ -134,7 +134,7 @@
                     </button>
                 </div>
                 <div class="decor">
-                    <img src="img/content/icecream2.png" alt="" class="seedetails__img">
+                    <img src="img/content/icecream2.jpg" alt="" class="seedetails__img">
                 </div>
             </div>
         </section>
